# Oxyde

./: .gitignore  README.md  cargo.toml  lib.sol
dev_notes/: EXPECTATIONS.md  GLOBALS.md  MACRO_AND_TRANSPILING.md  README.md  STORAGE.md  TESTING.md
oxyde_cli/: Cargo.toml
oxyde_cli/src/: main.rs
oxyde_evm/: Cargo.toml  README.md
oxyde_evm/src/: instructions.rs  lib.rs
oxyde_macros/: Cargo.toml  README.md
oxyde_macros/src/: lib.rs
oxyde_parser/: Cargo.toml
oxyde_parser/src/: lib.rs  typing.rs  visitors.rs
oxyde_sdk/: Cargo.toml
oxyde_sdk/TEST_BLOCKCHAIN_DB/commons/: active_contract.json  msg_sender.json
oxyde_sdk/src/: errors.rs  lib.rs  storage.rs  test_env.rs
oxyde_sdk/tests/: entrypoint_tests.rs  state_mutation_tests.rs
oxyde_test/: Cargo.toml
oxyde_test/TEST_BLOCKCHAIN_DB/: 0x1890…899a_-_target.json  0x3e4f…5cb8_-_target.json  0x7646…6fb6_-_target.json  0x9702…225f_-_target.json  0xa984…0f02_-_target.json
oxyde_test/TEST_BLOCKCHAIN_DB/commons/: active_contract.json  msg_sender.json  timestamp.json
oxyde_test/src/: lib.rs
oxyde_transpiler/: Cargo.toml  README.md  generated.sol
oxyde_transpiler/src/: lib.rs  main.rs  parsers.rs  target.sol  typing.rs  utils.rs
sample_contracts/: Cargo.toml  README_ERC20.md
sample_contracts/TEST_BLOCKCHAIN_DB/: 0x0589…e24c_-_admin.json  0x0589…e24c_-_balances.json  0x0886…cc23_-_admin.json  0x0886…cc23_-_balances.json  0x090c…3447_-_admin.json  0x090c…3447_-_allowances.json  0x090c…3447_-_balances.json  0x0eb2…b4ac_-_admin.json  0x0eb2…b4ac_-_allowances.json  0x0eb2…b4ac_-_balances.json  (+144 more)
(+10 files in other folders)
