[package]
name = "oxyde_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
quote = "1.0"
# syn = { version = "1.0", features = ["full", "extra-traits", "parsing"] }
syn = { version = "2.0.16", features = ["full"] }
proc-macro2 = "*"
bincode = "1.3.3"
serde = { version = "1.0.163", features = ["derive"] }
oxyde_parser = {path="../oxyde_parser"}