[package]
name = "oxyde_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxyde_macros = {path="../oxyde_macros"}
ethereum-types = "0.14.1"
serde = { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"
jfs = "0.9.0"
json-db = "0.1.2"
lazy_static = "1.4.0"
thiserror = "1.0.40"
