[package]
name = "oxyde_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxyde_sdk = {path="../oxyde_sdk"}
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"
